--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,33 @@
 {
-   "author": "Mahmood Moghimi, m.moghimi[at]modares.ac.ir",
-   "background": {
-      "scripts": [ "js/background.js" ]
-   },
-	"browser_action": {
-		"default_icon": "img/icon38.png",
-		"default_popup": "html/popup.html",
-		"default_title": "Phishing Detector"
-	},
-   "content_scripts": [ {
-      "js": [ "js/endScript.js" ], 
-      "matches": [ "http://*/*", "https://*/*" ],
+  "version": "1.3.6",
+  "manifest_version": 2,
+  "name": "__MSG_appName__",
+  "short_name": "__MSG_appShortName__",
+  "description": "__MSG_appDesc__",
+  "author": "Mahmood Moghimi, m.moghimi[at]modares.ac.ir",
+  "homepage_url": "https://moghimi.net/works/PhishDetector",
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
+  "default_locale": "en",
+  "icons": {
+    "128": "img/icon128.png",
+    "16": "img/icon16.png",
+    "32": "img/icon32.png",
+    "96": "img/icon96.png"
+  },
+  "offline_enabled": false,
+  "background": {
+    "scripts": ["js/background.js"]
+  },
+  "browser_action": {
+    "default_icon": "img/icon38.png",
+    "default_popup": "html/popup.html",
+    "default_title": "Phishing Detector"
+  },
+  "content_scripts": [
+    {
+      "js": ["js/endScript.js"],
+      "matches": ["http://*/*", "https://*/*"],
       "run_at": "document_start"
-   } ],
-   "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'",
-   "default_locale": "en",
-   "description": "__MSG_appDesc__",
-   "homepage_url": "https://moghimi.net/works/PhishDetector",
-	"icons": {
-		"128": "img/icon128.png",
-		"16": "img/icon16.png",
-		"32": "img/icon32.png",
-		"96": "img/icon96.png"
-	},
-   "manifest_version": 2,
-   "name": "__MSG_appName__",
-   "offline_enabled": false,
-   "short_name": "__MSG_appShortName__",
-   "version": "1.3.6"
+    }
+  ]
 }
